DiffRenderSource() fix for PHP 8, keep ins/del tags on the same line, .diffmarkup white-space: pre-wrap.
git-svn-id: svn://pmwiki.org/pmwiki/trunk@4510 524c5546-5005-0410-9a3e-e25e191bd360

--- a/pub/skins/pmwiki-responsive/skin.css
+++ b/pub/skins/pmwiki-responsive/skin.css
@@ -305,7 +305,7 @@ div.faqtoc div.faq p.question * { display:inline; }
 .diffadd { border-left:5px #9f9 solid; padding-left:5px; }
 .diffdel { border-left:5px #ff9 solid; padding-left:5px; }
 .diffrestore { margin:20px 0px; }
-.diffmarkup { font-size:14px;  } 
+.diffmarkup { font-size:14px; white-space: pre-wrap; } 
 .diffmarkup del { background:#ff9; text-decoration: none; }
 .diffmarkup ins { background:#9f9; text-decoration: none; }
 .rcplus { cursor:pointer; opacity:.3; font-weight:bold; padding: 0 .3em; }
